ipc/ipdl/test/ipdl/error/trans_WrongDirection5.ipdl
intr protocol trans_WrongDirection5 {

parent:
    intr Msg();
    __delete__()

state S1:
    call Msg goto S1;

start state_:
    recv __delete__;
};
